--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_kofi
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://192.168.33.10:3306/kofi_clone
+spring.datasource.username=vagrantDB
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto:create-drop
+spring.jpa.show-sql:true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
