--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 
-spring.datasource.url=jdbc:mysql://192.168.33.10:3306/kofi_clone
-spring.datasource.username=vagrantDB
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://192.168.33.10:3306/kofi_clone
+#spring.datasource.username=vagrantDB
+#spring.datasource.password=password
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/kofi_clone
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto:create-drop
 spring.jpa.show-sql:true
 spring.jpa.properties.hibernate.format_sql=true
